# cardano-wallet-client

./: .gitignore  README.md  cabal.project  cardano_wallet_specification.yaml  flake.nix  justfile
test/: cardano-wallet-client-test.cabal
test/src/: WalletSpec.hs
